Image component cartIcon color changed for better visibility, add cartItems state to Header component so it shows correct cart icon

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -50,6 +50,8 @@ header {
     }
 }
 
+
+
 .main-page {
     margin-top: 0.5em;
     display: flex;
@@ -93,13 +95,7 @@ header {
         top: 8px;
         right: 8px;
         position: absolute;
-
-        &.cart-empty {
-            color: white;
-        }
-
-        &.cart-full {
-            color: orangered;
-        }
+        color: white;
     }
 }
+
